--- a/about.html
+++ b/about.html
@@ -139,34 +139,7 @@
         </header>
     </section>
 
-    <section class="mt-5 mb-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="img">
-                        <img src="https://i.pinimg.com/736x/30/f7/7d/30f77d9f560a5de43530f38e2f500b12.jpg" alt="" class="img-fluid">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="about-conten">
-                        <h6>About Us</h6>
-                        <h2>We Always Make The Best</h2>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora itaque, nobis repellat
-                            repudiandae cum sed dolorum ab tempore excepturi consequuntur alias debitis minus eius
-                            inventore autem vitae assumenda, fugit aliquid cumque! Optio reprehenderit deleniti,
-                            pariatur vel sit sunt aliquam enim? Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Vitae in, reprehenderit ipsa voluptatem adipisci quo blanditiis quia voluptas sunt fugit
-                            doloribus hic natus, quas necessitatibus beatae nam quasi voluptatibus aliquid.</p>
-
-                            <div class="col-md-6 mt-5">
-                            <button class="btn-search p-" style="background-color: #c5a059 !important;"><i
-                                    class="fa fa-search me-2"></i> SEARCH PROPERTY</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
 
 
    <section class="prestige-section animate__animated animate__fadeInUp animate__delay-2s" id="counter-section">
@@ -224,8 +197,114 @@
             </div>
         </div>
     </section>
+ <!-- about us section  -->
+    <section class="mt-5  mb-5">
+        <div class="container-fluid">
+             <div class="text-center mb-5">
+            <h2 class="section-title">Our House Plan</h2>
+        </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <img src="https://i.pinimg.com/1200x/74/22/39/7422394cad6b0d6a311624fc8a17579b.jpg" width="100%" alt="">
+                </div>
+                 <div class="col-lg-6 mt-4">
+                    <div class="pe-lg-3">
+
+                      
 
 
+                        <div class="relative overflow-hidden">
+                            <div class="d-flex bg-dark-4 px-2 py-2 ">
+                                <div class="w-60">Living Room</div>
+                                <div class="w-40 fw-600 text-end ms-2"> 21m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2 ">
+                                <div class="w-60">Master Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-2">15.3m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2 ">
+                                <div class="w-60">Kitchen</div>
+                                <div class="w-40 fw-600 text-end ms-2">9.3m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2 ">
+                                <div class="w-60">Guest Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">12.2m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">Bathroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.9m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2">
+                                <div class="w-60"> Dining Room</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.2m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">TV Lounge</div>
+                                <div class="w-40 fw-600 text-end ms-5">7.8m square</div>
+                            </div>
+                              <div class="d-flex px-2 py-2">
+                                <div class="w-60">Hallways</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.4m square</div>
+                            </div>
+                             <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">13.2m square</div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- new  -->
+<!-- new  -->
+ 
+
+
+   <section class="mt-5 pt-5 mb-5">
+        <div class="container">
+            <div class="row ">
+                <div class="col-lg-6">
+                    <div class="img">
+                        <img src="https://i.pinimg.com/736x/30/f7/7d/30f77d9f560a5de43530f38e2f500b12.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="about-conten">
+                        <h6>About Us</h6>
+                        <h2>We Always Make The Best</h2>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempora itaque, nobis repellat
+                            repudiandae cum sed dolorum ab tempore excepturi consequuntur alias debitis minus eius
+                            inventore autem vitae assumenda, fugit aliquid cumque! Optio reprehenderit deleniti,
+                            pariatur vel sit sunt aliquam enim? Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                            Vitae in, reprehenderit ipsa voluptatem adipisci quo blanditiis quia voluptas sunt fugit
+                            doloribus hic natus, quas necessitatibus beatae nam quasi voluptatibus aliquid.</p>
+
+                            <div class="col-md-6 mt-5">
+                            <button class="btn-search p-" style="background-color: #c5a059 !important;"><i
+                                    class="fa fa-search me-2"></i> SEARCH PROPERTY</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+  <!-- end  -->
+   <div class="container-fluid mt-5 mb-5 "
+    style="padding: 20px; margin-top: 100px !important; background-size: cover; background-repeat: no-repeat; background:linear-gradient(rgba(0, 0, 0, 0.90), rgba(0, 0, 0, 0.3)),  url(https://i.pinimg.com/1200x/65/ca/8c/65ca8c20fdfdd50d0ba2c64178e2a5ab.jpg); height: 50vh; background-position: center;">
+    <div class="col-lg-12 align-items-center">
+      <div class="new-content text-center mt-5">
+       <h5 class="text-white fw-bold">Hire Us Now</h5>
+       <h2 class="text-white fw-bold " style="font-size: 50px;">We Are Always Ready To <br> Take A Perfect Shot </h2>
+        <div class="col-12 mt-5">
+                            <button class="btn-search p-" style="background-color: #c5a059 !important; width: 250px;">Get Started</button>
+                        </div>
+      </div>
+    </div>
+  </div>
+   <!-- end  -->
     <footer>
         <div class="container">
             <div class="row g-4">
