--- a/contact.html
+++ b/contact.html
@@ -246,7 +246,7 @@
                 <div class="text-center">
                     <iframe
                         src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7120.069061041655!2d80.944806!3d26.838854!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399bfd00382543df%3A0xdfb4dfa8bb546e67!2sBE%20Realty!5e0!3m2!1sen!2sin!4v1762336252847!5m2!1sen!2sin"
-                        width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                        width="100%" height="330" style="border:0;" allowfullscreen="" loading="lazy"
                         referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
@@ -279,8 +279,8 @@
 
 
                     <!-- <button class="">Login</button> -->
-                    <div class="text-center">
-                        <button type="submit" class="btn-main mt-2">SUBMIT</button>
+                      <div class="col-md-6">
+                        <button class="btn-search"><i class="fa fa-search me-2"></i> SEARCH PROPERTY</button>
                     </div>
                 </form>
             </div>
