--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
            
   <li class="nav-item mx-2">
-              <a class="nav-link  " href="service.html">Services</a>
+              <a class="nav-link  " href="blog.html">Blog</a>
             </li>
     <li class="nav-item"><a class="nav-link" href="#">
                             <div style="border-bottom: 1.5px solid red; font-size: 20px;"><i
