--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Real estate </title>
+    <link rel="shortcut icon" href="images/logoimg.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet"
@@ -52,6 +53,8 @@
             </div>
         </div>
     </nav> -->
+
+
 
 
 <!-- 2 -->
@@ -192,7 +195,7 @@
         </div>
             <div class="row justify-content-center">
                 <div class="col-lg-6">
-                    <img src="https://i.pinimg.com/1200x/ea/ca/55/eaca55087e7b906370e31fef73a90631.jpg" width="100%" alt="">
+                    <img style="border-radius: 15px;" src="https://i.pinimg.com/1200x/ea/ca/55/eaca55087e7b906370e31fef73a90631.jpg" width="100%" alt="">
                 </div>
                 <div class="col-lg-6">
                     <div class="">
@@ -513,6 +516,68 @@
             </div>
         </div>
     </div>
+     <!-- about us section  -->
+    <section class="mt-5  mb-5">
+        <div class="container-fluid">
+             <div class="text-center mb-5">
+            <h2 class="section-title">Our House Plan</h2>
+        </div>
+            <div class="row justify-content-center">
+                <div class="col-lg-6">
+                    <img src="https://i.pinimg.com/1200x/74/22/39/7422394cad6b0d6a311624fc8a17579b.jpg" width="100%" alt="">
+                </div>
+                 <div class="col-lg-6 mt-4">
+                    <div class="pe-lg-3">
+
+                      
+
+
+                        <div class="relative overflow-hidden">
+                            <div class="d-flex bg-dark-4 px-2 py-2 ">
+                                <div class="w-60">Living Room</div>
+                                <div class="w-40 fw-600 text-end ms-2"> 21m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2 ">
+                                <div class="w-60">Master Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-2">15.3m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2 ">
+                                <div class="w-60">Kitchen</div>
+                                <div class="w-40 fw-600 text-end ms-2">9.3m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2 ">
+                                <div class="w-60">Guest Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">12.2m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">Bathroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.9m square</div>
+                            </div>
+                            <div class="d-flex px-2 py-2">
+                                <div class="w-60"> Dining Room</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.2m square</div>
+                            </div>
+                            <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">TV Lounge</div>
+                                <div class="w-40 fw-600 text-end ms-5">7.8m square</div>
+                            </div>
+                              <div class="d-flex px-2 py-2">
+                                <div class="w-60">Hallways</div>
+                                <div class="w-40 fw-600 text-end ms-5">8.4m square</div>
+                            </div>
+                             <div class="d-flex bg-dark-4 px-2 py-2">
+                                <div class="w-60">Bedroom</div>
+                                <div class="w-40 fw-600 text-end ms-5">13.2m square</div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- new  -->
     <!-- new project in  -->
     <section class="mt-5">
         <div class="container-fluid bg-light pt-5 pb-5 mt-5">
@@ -540,7 +605,7 @@
 
                         <div class="list">
                             <ul>
-                                <li><img src="images/cyber-security.png" alt="">Save time & money by avoiding costly
+                                <li>Save time & money by avoiding costly
                                     mistakes</li>
                                 <li>Access exclusive trade resources</li>
                                 <li>Maximize space with expert space saving interior design</li>
