--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 
 
 <!-- 2 -->
-   <nav class="navbar navbar-expand-lg  fixed-top shadow-lg h-20 p-2">
+ <nav class="navbar navbar-expand-lg  fixed-top shadow-lg h-20 p-2">
     <div class="container-fluid ">
       <!-- logo -->
 
@@ -107,14 +107,14 @@
 
            
   <li class="nav-item mx-2">
-              <a class="nav-link  " href="service.html">Services</a>
+              <a class="nav-link  " href="blog.html">Blog</a>
             </li>
     <li class="nav-item"><a class="nav-link" href="#">
                             <div style="border-bottom: 1.5px solid red; font-size: 20px;"><i
                                     class="fas fa-phone-alt me-1 text-primary"></i> +91-1324546787</div>
                         </a></li>
- <!-- <button class="btn btn-outline-dark px-4 rounded-0 btn-sm" data-bs-toggle="modal"
-                        data-bs-target="#enquiryModal">ENQUIRE NOW</button> -->
+ <button class="btn btn-outline-dark px-4 rounded-0 btn-sm" data-bs-toggle="modal"
+                        data-bs-target="#enquiryModal">ENQUIRE NOW</button>
 
           </ul>
 
