--- a/service.html
+++ b/service.html
@@ -138,7 +138,66 @@
     </section>
 
 
-  
+  <div class="container-fluid mb-5">
+ <div class="col-lg-12 text-center mt-5 all-img">
+          <div class="row g-4">
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/waste.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/maintenance.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/bin.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/closure.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/client.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+            <!-- endss -->
+            <div class="col-md-4 col-6">
+              <div class="h-100 rounded-1">
+                <img src="img/pruning-shears.png" class="w-70px mb-4" alt="">
+                <div class="relative">
+                  <h1 class="h5">Ultra Luxurious 4 BHK Flats</h1>
+                </div>
+              </div>
+            </div>
+            <!-- endss -->
+
+          </div>
+        </div>
+</div>
 
     <footer>
         <div class="container">
