--- a/about.html
+++ b/about.html
@@ -258,7 +258,7 @@
                 </form>
                 
                 <p class="legal-text mt-3">
-                    By subscribing you agree to with our <a href="#" class="text-white">Privacy Policy</a> and provide consent to receive updates from our company.
+                    By subscribing you agree to with our <a href="privacy.html" class="text-white">Privacy Policy</a> and provide consent to receive updates from our company.
                 </p>
             </div>
 
@@ -285,7 +285,7 @@
                 <span class="legal-text">©2026, All right reserved.</span>
             </div>
             <div class="col-md-6 text-center text-md-end bottom-links">
-                <a href="#">Privacy Policy</a>
+                <a href="privacy.html">Privacy Policy</a>
                 <a href="#">Terms of Service</a>
                
             </div>
