--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                         <div class="project-card">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1486406146926-c627a92ad1ab?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/54/6a/2c/546a2c305c9be31001df0a64803c2b0f.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Mona City Home</h5>
@@ -293,7 +293,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/736x/bb/76/5f/bb765fa3ca204937dc80bb0424b552bd.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
@@ -310,7 +310,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/77/00/ac/7700acfe975dab47b21cc8e21bb9af12.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
@@ -326,7 +326,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/2e/57/92/2e57922b6170248ea6020cfcee241a06.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
@@ -343,7 +343,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/5e/fa/40/5efa40cc2903ff4071e31dc3b845987d.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
@@ -361,7 +361,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/d4/b9/85/d4b9858c92610c3ad0b66cf97d7fb063.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
@@ -377,7 +377,7 @@
                         <div class="project-card" data-bs-toggle="modal" data-bs-target="#enquiryModal">
                             <div class="img-wrapper">
                                 <img
-                                    src="https://images.unsplash.com/photo-1560518883-ce09059eeffa?auto=format&fit=crop&w=800&q=80">
+                                    src="https://i.pinimg.com/1200x/ed/b7/09/edb7099ec6d51976731e2f82d398f2d9.jpg">
                             </div>
                             <div class="p-4">
                                 <h5 class="fw-bold mb-1">Avenue 125</h5>
