--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
                             accusamus velit nobis eos, commodi voluptates reprehenderit facere itaque porro sunt minima
                             ab vero officia ipsum laudantium soluta. Aliquid cumque enim blanditiis itaque illo
                             asperiores natus ipsa, dolor, pariatur sint aperiam quae.</p>
-                        <div class="col-md-8 mt-5">
+                        <div class="col-md-8 mt-5 mb-3">
                             <button class="btn-search p-3" style="background-color: #c5a059 !important;"><i
                                     class="fa fa-search me-2"></i> SEARCH PROPERTY</button>
                         </div>
